src/cffi/classes/wxGrid_cpp.lisp


;;;wxGrid_cpp.lisp
;;;License  : wxWindows License 3.1
;;;Author(s) : Surendra Singhi (surendra@asu.edu) 
;;;Copyright (C) 2005 Surendra Singhi 
;;;See the file LICENSE for information on usage and redistribution.
;;;
;;; $Header$
;;;

(in-package :wxcl)




(cffi:defcfun ("wxGridCellCoordsArray_Create" wxGridCellCoordsArray_Create) :pointer)

(cffi:defcfun ("wxGridCellCoordsArray_Delete" wxGridCellCoordsArray_Delete) :void
  (_obj :pointer))

(cffi:defcfun ("wxGridCellCoordsArray_GetCount" wxGridCellCoordsArray_GetCount) :int
  (_obj :pointer))

(cffi:defcfun ("wxGridCellCoordsArray_Item" wxGridCellCoordsArray_Item) :void
  (_obj :pointer)
  (_idx :int)
  (_c :pointer)
  (_r :pointer))

(cffi:defcfun ("wxGridCellEditor_IsCreated" wxGridCellEditor_IsCreated) :int
  (_obj :pointer))

(cffi:defcfun ("wxGridCellEditor_GetControl" wxGridCellEditor_GetControl) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxGridCellEditor_SetControl" wxGridCellEditor_SetControl) :void
  (_obj :pointer)
  (control :pointer))

(cffi:defcfun ("wxGridCellEditor_Create" wxGridCellEditor_Create) :void
  (_obj :pointer)
  (parent :pointer)
  (id :int)
  (evtHandler :pointer))

(cffi:defcfun ("wxGridCellEditor_SetSize" wxGridCellEditor_SetSize) :void
  (_obj :pointer)
  (x :int)
  (y :int)
  (w :int)
  (h :int))

(cffi:defcfun ("wxGridCellEditor_Show" wxGridCellEditor_Show) :void
  (_obj :pointer)
  (show :int)
  (attr :pointer))

(cffi:defcfun ("wxGridCellEditor_PaintBackground" wxGridCellEditor_PaintBackground) :void
  (_obj :pointer)
  (x :int)
  (y :int)
  (w :int)
  (h :int)
  (attr :pointer))

(cffi:defcfun ("wxGridCellEditor_BeginEdit" wxGridCellEditor_BeginEdit) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (grid :pointer))

(cffi:defcfun ("wxGridCellEditor_EndEdit" wxGridCellEditor_EndEdit) :int
  (_obj :pointer)
  (row :int)
  (col :int)
  (grid :pointer))

(cffi:defcfun ("wxGridCellEditor_Reset" wxGridCellEditor_Reset) :void
  (_obj :pointer))

(cffi:defcfun ("wxGridCellEditor_IsAcceptedKey" wxGridCellEditor_IsAcceptedKey) :int
  (_obj :pointer)
  (event :pointer))

(cffi:defcfun ("wxGridCellEditor_StartingKey" wxGridCellEditor_StartingKey) :void
  (_obj :pointer)
  (event :pointer))

(cffi:defcfun ("wxGridCellEditor_StartingClick" wxGridCellEditor_StartingClick) :void
  (_obj :pointer))

(cffi:defcfun ("wxGridCellEditor_HandleReturn" wxGridCellEditor_HandleReturn) :void
  (_obj :pointer)
  (event :pointer))

(cffi:defcfun ("wxGridCellEditor_Destroy" wxGridCellEditor_Destroy) :void
  (_obj :pointer))

(cffi:defcfun ("wxGridCellEditor_SetParameters" wxGridCellEditor_SetParameters) :void
  (_obj :pointer)
  (params :pointer))

(cffi:defcfun ("wxGridCellTextEditor_Ctor" wxGridCellTextEditor_Ctor) :pointer)

(cffi:defcfun ("wxGridCellNumberEditor_Ctor" wxGridCellNumberEditor_Ctor) :pointer
  (min :int)
  (max :int))

(cffi:defcfun ("wxGridCellFloatEditor_Ctor" wxGridCellFloatEditor_Ctor) :pointer
  (width :int)
  (precision :int))

(cffi:defcfun ("wxGridCellBoolEditor_Ctor" wxGridCellBoolEditor_Ctor) :pointer)

(cffi:defcfun ("wxGridCellChoiceEditor_Ctor" wxGridCellChoiceEditor_Ctor) :pointer
  (count :int)
  (choices :pointer)
  (allowOthers :int))

(cffi:defcfun ("wxGridCellAttr_Ctor" wxGridCellAttr_Ctor) :pointer)

(cffi:defcfun ("wxGridCellAttr_IncRef" wxGridCellAttr_IncRef) :void
  (_obj :pointer))

(cffi:defcfun ("wxGridCellAttr_DecRef" wxGridCellAttr_DecRef) :void
  (_obj :pointer))

(cffi:defcfun ("wxGridCellAttr_SetTextColour" wxGridCellAttr_SetTextColour) :void
  (_obj :pointer)
  (colText :pointer))

(cffi:defcfun ("wxGridCellAttr_SetBackgroundColour" wxGridCellAttr_SetBackgroundColour) :void
  (_obj :pointer)
  (colBack :pointer))

(cffi:defcfun ("wxGridCellAttr_SetFont" wxGridCellAttr_SetFont) :void
  (_obj :pointer)
  (font :pointer))

(cffi:defcfun ("wxGridCellAttr_SetAlignment" wxGridCellAttr_SetAlignment) :void
  (_obj :pointer)
  (hAlign :int)
  (vAlign :int))

(cffi:defcfun ("wxGridCellAttr_SetReadOnly" wxGridCellAttr_SetReadOnly) :void
  (_obj :pointer)
  (isReadOnly :int))

(cffi:defcfun ("wxGridCellAttr_SetRenderer" wxGridCellAttr_SetRenderer) :void
  (_obj :pointer)
  (renderer :pointer))

(cffi:defcfun ("wxGridCellAttr_SetEditor" wxGridCellAttr_SetEditor) :void
  (_obj :pointer)
  (editor :pointer))

(cffi:defcfun ("wxGridCellAttr_HasTextColour" wxGridCellAttr_HasTextColour) :int
  (_obj :pointer))

(cffi:defcfun ("wxGridCellAttr_HasBackgroundColour" wxGridCellAttr_HasBackgroundColour) :int
  (_obj :pointer))

(cffi:defcfun ("wxGridCellAttr_HasFont" wxGridCellAttr_HasFont) :int
  (_obj :pointer))

(cffi:defcfun ("wxGridCellAttr_HasAlignment" wxGridCellAttr_HasAlignment) :int
  (_obj :pointer))

(cffi:defcfun ("wxGridCellAttr_HasRenderer" wxGridCellAttr_HasRenderer) :int
  (_obj :pointer))

(cffi:defcfun ("wxGridCellAttr_HasEditor" wxGridCellAttr_HasEditor) :int
  (_obj :pointer))

(cffi:defcfun ("wxGridCellAttr_GetTextColour" wxGridCellAttr_GetTextColour) :void
  (_obj :pointer)
  (colour :pointer))

(cffi:defcfun ("wxGridCellAttr_GetBackgroundColour" wxGridCellAttr_GetBackgroundColour) :void
  (_obj :pointer)
  (colour :pointer))

(cffi:defcfun ("wxGridCellAttr_GetFont" wxGridCellAttr_GetFont) :void
  (_obj :pointer)
  (font :pointer))

(cffi:defcfun ("wxGridCellAttr_GetAlignment" wxGridCellAttr_GetAlignment) :void
  (_obj :pointer)
  (hAlign :pointer)
  (vAlign :pointer))

(cffi:defcfun ("wxGridCellAttr_GetRenderer" wxGridCellAttr_GetRenderer) :pointer
  (_obj :pointer)
  (grid :pointer)
  (row :int)
  (col :int))

(cffi:defcfun ("wxGridCellAttr_GetEditor" wxGridCellAttr_GetEditor) :pointer
  (_obj :pointer)
  (grid :pointer)
  (row :int)
  (col :int))

(cffi:defcfun ("wxGridCellAttr_IsReadOnly" wxGridCellAttr_IsReadOnly) :int
  (_obj :pointer))

(cffi:defcfun ("wxGridCellAttr_SetDefAttr" wxGridCellAttr_SetDefAttr) :void
  (_obj :pointer)
  (defAttr :pointer))

(cffi:defcfun ("wxGrid_Create" wxGrid_Create) :pointer
  (_prt :pointer)
  (_id :int)
  (_lft :int)
  (_top :int)
  (_wdt :int)
  (_hgt :int)
  (_stl :int))

(cffi:defcfun ("wxGrid_CreateGrid" wxGrid_CreateGrid) :void
  (_obj :pointer)
  (rows :int)
  (cols :int)
  (selmode :int))

(cffi:defcfun ("wxGrid_SetSelectionMode" wxGrid_SetSelectionMode) :void
  (_obj :pointer)
  (selmode :int))

(cffi:defcfun ("wxGrid_GetNumberRows" wxGrid_GetNumberRows) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_GetNumberCols" wxGrid_GetNumberCols) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_CalcRowLabelsExposed" wxGrid_CalcRowLabelsExposed) :void
  (_obj :pointer)
  (reg :pointer))

(cffi:defcfun ("wxGrid_CalcColLabelsExposed" wxGrid_CalcColLabelsExposed) :void
  (_obj :pointer)
  (reg :pointer))

(cffi:defcfun ("wxGrid_CalcCellsExposed" wxGrid_CalcCellsExposed) :void
  (_obj :pointer)
  (reg :pointer))

(cffi:defcfun ("wxGrid_NewCalcCellsExposed" wxGrid_NewCalcCellsExposed) :void
  (_obj :pointer)
  (reg :pointer)
  (arr :pointer))

(cffi:defcfun ("wxGrid_ProcessRowLabelMouseEvent" wxGrid_ProcessRowLabelMouseEvent) :void
  (_obj :pointer)
  (event :pointer))

(cffi:defcfun ("wxGrid_ProcessColLabelMouseEvent" wxGrid_ProcessColLabelMouseEvent) :void
  (_obj :pointer)
  (event :pointer))

(cffi:defcfun ("wxGrid_ProcessCornerLabelMouseEvent" wxGrid_ProcessCornerLabelMouseEvent) :void
  (_obj :pointer)
  (event :pointer))

(cffi:defcfun ("wxGrid_ProcessGridCellMouseEvent" wxGrid_ProcessGridCellMouseEvent) :void
  (_obj :pointer)
  (event :pointer))

(cffi:defcfun ("wxGrid_ProcessTableMessage" wxGrid_ProcessTableMessage) :int
  (_obj :pointer)
  (evt :pointer))

(cffi:defcfun ("wxGrid_DoEndDragResizeRow" wxGrid_DoEndDragResizeRow) :void
  (_obj :pointer))

(cffi:defcfun ("wxGrid_DoEndDragResizeCol" wxGrid_DoEndDragResizeCol) :void
  (_obj :pointer))

(cffi:defcfun ("wxGrid_GetTable" wxGrid_GetTable) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxGrid_SetTable" wxGrid_SetTable) :int
  (_obj :pointer)
  (table :pointer)
  (takeOwnership :int)
  (selmode :int))

(cffi:defcfun ("wxGrid_ClearGrid" wxGrid_ClearGrid) :void
  (_obj :pointer))

(cffi:defcfun ("wxGrid_InsertRows" wxGrid_InsertRows) :int
  (_obj :pointer)
  (pos :int)
  (numRows :int)
  (updateLabels :int))

(cffi:defcfun ("wxGrid_AppendRows" wxGrid_AppendRows) :int
  (_obj :pointer)
  (numRows :int)
  (updateLabels :int))

(cffi:defcfun ("wxGrid_DeleteRows" wxGrid_DeleteRows) :int
  (_obj :pointer)
  (pos :int)
  (numRows :int)
  (updateLabels :int))

(cffi:defcfun ("wxGrid_InsertCols" wxGrid_InsertCols) :int
  (_obj :pointer)
  (pos :int)
  (numCols :int)
  (updateLabels :int))

(cffi:defcfun ("wxGrid_AppendCols" wxGrid_AppendCols) :int
  (_obj :pointer)
  (numCols :int)
  (updateLabels :int))

(cffi:defcfun ("wxGrid_DeleteCols" wxGrid_DeleteCols) :int
  (_obj :pointer)
  (pos :int)
  (numCols :int)
  (updateLabels :int))

(cffi:defcfun ("wxGrid_DrawGridCellArea" wxGrid_DrawGridCellArea) :void
  (_obj :pointer)
  (dc :pointer))

(cffi:defcfun ("wxGrid_NewDrawGridCellArea" wxGrid_NewDrawGridCellArea) :void
  (_obj :pointer)
  (dc :pointer)
  (arr :pointer))

(cffi:defcfun ("wxGrid_DrawGridSpace" wxGrid_DrawGridSpace) :void
  (_obj :pointer)
  (dc :pointer))

(cffi:defcfun ("wxGrid_DrawCellBorder" wxGrid_DrawCellBorder) :void
  (_obj :pointer)
  (dc :pointer)
  (_row :int)
  (_col :int))

(cffi:defcfun ("wxGrid_DrawAllGridLines" wxGrid_DrawAllGridLines) :void
  (_obj :pointer)
  (dc :pointer)
  (reg :pointer))

(cffi:defcfun ("wxGrid_DrawCell" wxGrid_DrawCell) :void
  (_obj :pointer)
  (dc :pointer)
  (_row :int)
  (_col :int))

(cffi:defcfun ("wxGrid_DrawHighlight" wxGrid_DrawHighlight) :void
  (_obj :pointer)
  (dc :pointer))

(cffi:defcfun ("wxGrid_NewDrawHighlight" wxGrid_NewDrawHighlight) :void
  (_obj :pointer)
  (dc :pointer)
  (arr :pointer))

(cffi:defcfun ("wxGrid_DrawCellHighlight" wxGrid_DrawCellHighlight) :void
  (_obj :pointer)
  (dc :pointer)
  (attr :pointer))

(cffi:defcfun ("wxGrid_DrawRowLabels" wxGrid_DrawRowLabels) :void
  (_obj :pointer)
  (dc :pointer))

(cffi:defcfun ("wxGrid_DrawRowLabel" wxGrid_DrawRowLabel) :void
  (_obj :pointer)
  (dc :pointer)
  (row :int))

(cffi:defcfun ("wxGrid_DrawColLabels" wxGrid_DrawColLabels) :void
  (_obj :pointer)
  (dc :pointer))

(cffi:defcfun ("wxGrid_DrawColLabel" wxGrid_DrawColLabel) :void
  (_obj :pointer)
  (dc :pointer)
  (col :int))

(cffi:defcfun ("wxGrid_DrawTextRectangle" wxGrid_DrawTextRectangle) :void
  (_obj :pointer)
  (dc :pointer)
  (txt :pointer)
  (x :int)
  (y :int)
  (w :int)
  (h :int)
  (horizontalAlignment :int)
  (verticalAlignment :int))

(cffi:defcfun ("wxGrid_StringToLines" wxGrid_StringToLines) :int
  (_obj :pointer)
  (value :pointer)
  (lines :pointer))

(cffi:defcfun ("wxGrid_GetTextBoxSize" wxGrid_GetTextBoxSize) :void
  (_obj :pointer)
  (dc :pointer)
  (count :int)
  (lines :pointer)
  (width :pointer)
  (height :pointer))

(cffi:defcfun ("wxGrid_BeginBatch" wxGrid_BeginBatch) :void
  (_obj :pointer))

(cffi:defcfun ("wxGrid_EndBatch" wxGrid_EndBatch) :void
  (_obj :pointer))

(cffi:defcfun ("wxGrid_GetBatchCount" wxGrid_GetBatchCount) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_IsEditable" wxGrid_IsEditable) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_EnableEditing" wxGrid_EnableEditing) :void
  (_obj :pointer)
  (edit :int))

(cffi:defcfun ("wxGrid_EnableCellEditControl" wxGrid_EnableCellEditControl) :void
  (_obj :pointer)
  (enable :int))

(cffi:defcfun ("wxGrid_DisableCellEditControl" wxGrid_DisableCellEditControl) :void
  (_obj :pointer))

(cffi:defcfun ("wxGrid_CanEnableCellControl" wxGrid_CanEnableCellControl) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_IsCellEditControlEnabled" wxGrid_IsCellEditControlEnabled) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_IsCellEditControlShown" wxGrid_IsCellEditControlShown) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_IsCurrentCellReadOnly" wxGrid_IsCurrentCellReadOnly) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_ShowCellEditControl" wxGrid_ShowCellEditControl) :void
  (_obj :pointer))
